--- a/styles/character_styles.css
+++ b/styles/character_styles.css
@@ -1,40 +1,43 @@
 .loader-div {
-	position: fixed;
-	top: 0;
-	left: 0;
-	background-color: #5cad4a7a;
-	height: 100vh;
-	width: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	-webkit-backdrop-filter: blur(2px);
-	backdrop-filter: blur( 2px );
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #5cad4a7a;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  -webkit-backdrop-filter: blur(2px);
+  backdrop-filter: blur(2px);
 }
 
-.loader-div .loader{
-	margin: 0 auto;
-	display: contents;
+.loader-div .loader {
+  margin: 0 auto;
+  display: contents;
 }
 
-.loading_off{
-	display: none;
+.loading_off {
+  display: none;
 }
 
-.loader img{
-	animation: loading-rotation 1.1s infinite ease-in-out;
-	width: 70%;
-	max-width: 35rem;
+.loader img {
+  -webkit-animation: loading-rotation 1.1s infinite ease-in-out; /* Safari & Chrome */
+  -moz-animation: loading-rotation 1.1s infinite ease-in-out; /* Firefox */
+  -ms-animation: loading-rotation 1.1s infinite ease-in-out; /* Internet Explorer */
+  -o-animation: loading-rotation 1.1s infinite ease-in-out; /* Opera */
+  animation: loading-rotation 1.1s infinite ease-in-out;
+  width: 70%;
+  max-width: 35rem;
 }
 
 @keyframes loading-rotation {
-	0% {
-		rotate: 360deg;
-		width: 70%;
-	}
-	100% {
-		rotate: 0deg;
-		width: 0%;
-	}
+  0% {
+    rotate: 360deg;
+    width: 70%;
+  }
+  100% {
+    rotate: 0deg;
+    width: 0%;
+  }
 }
-
