--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -52,6 +52,10 @@
 }
 
 .loader img{
+	-webkit-animation: loading-rotation 1.1s infinite ease-in-out; /* Safari & Chrome */
+	-moz-animation: loading-rotation 1.1s infinite ease-in-out; /* Firefox */
+	-ms-animation: loading-rotation 1.1s infinite ease-in-out; /* Internet Explorer */
+	-o-animation: loading-rotation 1.1s infinite ease-in-out; /* Opera */
 	animation: loading-rotation 1.1s infinite ease-in-out;
 	width: 70%;
 	max-width: 35rem;
