--- a/styles/character_styles.css
+++ b/styles/character_styles.css
@@ -22,11 +22,12 @@
 }
 
 .loader img {
-  -webkit-animation: loading-rotation 1.1s infinite ease-in-out; /* Safari & Chrome */
-  -moz-animation: loading-rotation 1.1s infinite ease-in-out; /* Firefox */
-  -ms-animation: loading-rotation 1.1s infinite ease-in-out; /* Internet Explorer */
-  -o-animation: loading-rotation 1.1s infinite ease-in-out; /* Opera */
-  animation: loading-rotation 1.1s infinite ease-in-out;
+	display: block;
+  -webkit-animation: loading-rotation 1.2s infinite ease-in-out; /* Safari & Chrome */
+  -moz-animation: loading-rotation 1.2s infinite ease-in-out; /* Firefox */
+  -ms-animation: loading-rotation 1.2s infinite ease-in-out; /* Internet Explorer */
+  -o-animation: loading-rotation 1.2s infinite ease-in-out; /* Opera */
+  animation: loading-rotation 1.2s infinite ease-in-out;
   width: 70%;
   max-width: 35rem;
 }
