--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -59,6 +59,7 @@
 	animation: loading-rotation 1.1s infinite ease-in-out;
 	width: 70%;
 	max-width: 35rem;
+	display: block;
 }
 
 @keyframes loading-rotation {
