--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -4,28 +4,58 @@
 	box-sizing: border-box;
 }
 
+h1,p{
+	color: white;
+}
+
+body{
+	background-color: #1F2833;
+}
+
+
 .CharStatus_red{
-    width: 0.3rem;
-    height: 0.3rem;
+    width: 1rem;
+    height: 1rem;
     border-radius: 100%;
-    border: solid red 2px;
+    border: solid rgb(255, 255, 255) 1px; 
     background-color: red;
+	margin-left: 0.3rem;
+	animation: statusanimation_red 2s infinite ease-in-out;
+}
+
+
+@keyframes statusanimation_red{
+	50%  {box-shadow: 0px 0px 5px rgb(255, 48, 48)}
 }
 
 .CharStatus_green{
-    width: 0.3rem;
-    height: 0.3rem;
+    width: 1rem;
+    height: 1rem;
     border-radius: 100%;
-    border: solid green 2px;
+    border: solid rgb(255, 255, 255) 1px; 
     background-color: green;
+	margin-left: 0.3rem;
+	animation: statusanimation_green 2s infinite ease-in-out;
 }
 
+@keyframes statusanimation_green{
+	50%  {box-shadow: 0px 0px 5px rgb(0, 156, 0);}
+}
+
+
 .CharStatus_grey{
-    width: 0.3rem;
-    height: 0.3rem;
+    width: 1rem;
+    height: 1rem;
     border-radius: 100%;
-    border: solid grey 2px;
+    border: solid rgb(255, 255, 255) 1px; 
+	line-height: 1rem;
     background-color: grey;
+	margin-left: 0.3rem;
+	animation: statusanimation_grey 2s infinite ease-in-out;
+}
+
+@keyframes statusanimation_grey{
+	50%  {box-shadow: 0px 0px 5px rgb(163, 163, 163);}
 }
 
 .loader-div {
@@ -52,14 +82,14 @@
 }
 
 .loader img{
-	-webkit-animation: loading-rotation 1.1s infinite linear; /* Safari & Chrome */
-	-moz-animation: loading-rotation 1.1s infinite linear; /* Firefox */
-	-ms-animation: loading-rotation 1.1s infinite linear; /* Internet Explorer */
-	-o-animation: loading-rotation 1.1s infinite linear; /* Opera */
-	animation: loading-rotation 1.1s infinite linear;
+	-webkit-animation: loading-rotation 1.1s infinite ease-in-out; /* Safari & Chrome */
+	-moz-animation: loading-rotation 1.1s infinite ease-in-out; /* Firefox */
+	-ms-animation: loading-rotation 1.1s infinite ease-in-out; /* Internet Explorer */
+	-o-animation: loading-rotation 1.1s infinite ease-in-out; /* Opera */
+	animation: loading-rotation 1.1s infinite ease-in-out;
 	width: 70%;
 	max-width: 35rem;
-	display: block;
+	/* display: block; */
 }
 
 @keyframes loading-rotation {
@@ -73,3 +103,11 @@
 	}
 }
 
+
+.CharStatusDiv{
+	display: flex;
+}
+
+.CharStatusDiv p{
+	margin-right: 0.2rem;
+}
