Add gender info and translations.

--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -12,6 +12,10 @@ body{
 	background-color: #1F2833;
 }
 
+.CharacterImage{
+	width: 12rem;
+	height: 12rem;
+}
 
 .CharStatus_red{
     width: 1rem;
