--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -9,8 +9,161 @@ h1,p{
 }
 
 body{
-	background-color: #1F2833;
+	background: #293241;
 }
+
+.Header{
+	border: solid 2px red;
+	display: flex;
+	margin: 1rem 0px 1rem 0px ;
+	justify-content: center;
+}
+
+
+.inputbox {
+	position: relative;
+	width: 196px;
+
+  }
+  
+  .inputbox input {
+	position: relative;
+	width: 100%;
+	padding: 20px 10px 10px;
+	background: transparent;
+	outline: none;
+	box-shadow: none;
+	border: none;
+	color: #23242a;
+	font-size: 1em;
+	letter-spacing: 0.05em;
+	transition: 0.5s;
+	z-index: 10;
+  }
+  
+  .inputbox span {
+	position: absolute;
+	left: 0;
+	padding: 20px 10px 10px;
+	font-size: 1em;
+	color: #8f8f8f;
+	letter-spacing: 00.05em;
+	transition: 0.5s;
+	pointer-events: none;
+  }
+  
+  .inputbox input:valid ~span,
+  .inputbox input:focus ~span {
+	color: #45ff5b;
+	transform: translateX(-10px) translateY(-34px);
+	font-size: 0,75em;
+  }
+  
+  .inputbox i {
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 2px;
+	background: #45ff5b;
+	border-radius: 4px;
+	transition: 0.5s;
+	pointer-events: none;
+	z-index: 9;
+  }
+  
+  .inputbox input:valid ~i,
+  .inputbox input:focus ~i {
+	height: 44px;
+  }
+
+
+
+  #changeLenguage_btn{
+	margin-left: 0.4rem;;
+	position: relative;
+	padding: 10px 20px;
+	border-radius: 7px;
+	border: 1px solid rgb(61, 106, 255);
+	font-size: 14px;
+	text-transform: uppercase;
+	font-weight: 600;
+	letter-spacing: 2px;
+	background: transparent;
+	color: #fff;
+	overflow: hidden;
+	box-shadow: 0 0 0 0 transparent;
+	-webkit-transition: all 0.2s ease-in;
+	-moz-transition: all 0.2s ease-in;
+	transition: all 0.2s ease-in;
+  }
+  
+  #changeLenguage_btn:hover {
+	background: rgb(61, 106, 255);
+	box-shadow: 0 0 30px 5px rgba(0, 142, 236, 0.815);
+	-webkit-transition: all 0.2s ease-out;
+	-moz-transition: all 0.2s ease-out;
+	transition: all 0.2s ease-out;
+  }
+  
+  #changeLenguage_btn:hover::before {
+	-webkit-animation: sh02 0.5s 0s linear;
+	-moz-animation: sh02 0.5s 0s linear;
+	animation: sh02 0.5s 0s linear;
+  }
+  
+  #changeLenguage_btn::before {
+	content: '';
+	display: block;
+	width: 0px;
+	height: 86%;
+	position: absolute;
+	top: 7%;
+	left: 0%;
+	opacity: 0;
+	background: #fff;
+	box-shadow: 0 0 50px 30px #fff;
+	-webkit-transform: skewX(-20deg);
+	-moz-transform: skewX(-20deg);
+	-ms-transform: skewX(-20deg);
+	-o-transform: skewX(-20deg);
+	transform: skewX(-20deg);
+  }
+  
+  @keyframes sh02 {
+	from {
+	  opacity: 0;
+	  left: 0%;
+	}
+  
+	50% {
+	  opacity: 1;
+	}
+  
+	to {
+	  opacity: 0;
+	  left: 100%;
+	}
+  }
+  
+  #changeLenguage_btn:active {
+	box-shadow: 0 0 0 0 transparent;
+	-webkit-transition: box-shadow 0.2s ease-in;
+	-moz-transition: box-shadow 0.2s ease-in;
+	transition: box-shadow 0.2s ease-in;
+  }
+  
+
+#Datadiv{
+	display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 auto;
+	gap: 30px;
+    width: 73%;
+}
+
 
 .CharacterImage{
 	width: 12rem;
@@ -24,6 +177,7 @@ body{
     border: solid rgb(255, 255, 255) 1px; 
     background-color: red;
 	margin-left: 0.3rem;
+
 	animation: statusanimation_red 2s infinite ease-in-out;
 }
 
@@ -39,6 +193,7 @@ body{
     border: solid rgb(255, 255, 255) 1px; 
     background-color: green;
 	margin-left: 0.3rem;
+
 	animation: statusanimation_green 2s infinite ease-in-out;
 }
 
@@ -55,6 +210,7 @@ body{
 	line-height: 1rem;
     background-color: grey;
 	margin-left: 0.3rem;
+
 	animation: statusanimation_grey 2s infinite ease-in-out;
 }
 
@@ -107,10 +263,21 @@ body{
 }
 
 
-.CharStatusDiv{
-	display: flex;
+.CharacterDiv{
+    align-content: center;
+	border: solid red 2px;
+	text-align: center;
+	width: 16rem;
+	padding: 1.7rem;
 }
 
-.CharStatusDiv p{
-	margin-right: 0.2rem;
+
+.CharacterDiv img{
+	border-radius: 50%;
+}
+
+.CharacterDiv p{
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
