--- a/styles/character_styles.css
+++ b/styles/character_styles.css
@@ -1,4 +1,39 @@
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Sniglet", cursive;
+}
+
+body {
+  background: linear-gradient(rgba(0, 0, 0, 0.686), rgba(0, 0, 0, 0.683)),
+    url("../imgs/Background_Image.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  height: 100vh;
+  width: 100vw;
+
+  display: grid;
+  place-content: center;
+  text-align: center;
+}
+
 .loader-div {
+  z-index: 1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #5cad4a7a;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  -webkit-backdrop-filter: blur(2px);
+  backdrop-filter: blur(2px);
+  z-index: 1;
   position: fixed;
   top: 0;
   left: 0;
@@ -22,7 +57,7 @@
 }
 
 .loader img {
-	display: block;
+  display: block;
   -webkit-animation: loading-rotation 1.2s infinite ease-in-out; /* Safari & Chrome */
   -moz-animation: loading-rotation 1.2s infinite ease-in-out; /* Firefox */
   -ms-animation: loading-rotation 1.2s infinite ease-in-out; /* Internet Explorer */
@@ -40,5 +75,77 @@
   100% {
     -webkit-transform: rotate(0deg);
     width: 0%;
+  }
+}
+
+#CharacterData {
+  display: flex;
+  color: white;
+  -webkit-box-shadow: 0px 0px 19px 0px rgb(0, 0, 0);
+  -moz-box-shadow: 0px 0px 19px 0px rgb(0, 0, 0);
+  box-shadow: 0px 0px 30px 0px rgb(0, 0, 0);
+  
+  -webkit-border-top-right-radius: 64px;
+  -webkit-border-bottom-right-radius: 64px;
+  -moz-border-radius-topright: 64px;
+  -moz-border-radius-bottomright: 64px;
+  border-top-right-radius: 64px;
+  border-bottom-right-radius: 64px;
+}
+
+#CharacterData img {
+  width: 25rem;
+}
+
+.CharacterInfo {
+  display: grid;
+  place-content: center;
+  text-align: center;
+  padding: 2rem;
+
+  border-radius: 4rem;
+  background: rgba(54, 54, 54, 0.15);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(5.5px);
+  -webkit-backdrop-filter: blur(5.5px);
+
+}
+
+.CharacterInfo button {
+  color: white;
+  font-size: 1rem;
+  background-color: #293241;
+  padding: 0.3rem;
+  border-color: white;
+  border-radius: 0.2rem;
+  width: 100%;
+}
+
+.CharacterInfo button:active { 
+  border-style: outset;
+}
+
+@media (max-width: 780px) {
+  #CharacterData {
+    display: block;
+    margin: 0.5rem;
+
+    -webkit-border-bottom-right-radius: 64px;
+    -webkit-border-bottom-left-radius: 64px;
+    -moz-border-radius-bottomright: 64px;
+    -moz-border-radius-bottomleft: 64px;
+    border-bottom-right-radius: 64px;
+    border-bottom-left-radius: 64px;
+  }
+
+  #CharacterData img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .CharacterInfo {
+    margin-top: -0.4rem;
+    border-radius: 0rem;
+    padding-top: 0px;
   }
 }
