--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -184,16 +184,11 @@ body{
 .character-card{        
   position: relative;
   width: 19rem;
-  background: radial-gradient(#111 50%, #000 100%);
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+  max-height: 310px;
   overflow: hidden;
   border-radius: 1rem;
-}
-
-@media(max-width: 435px){
-  .character-card{
-    height: 100%;
-  }
+  aspect-ratio: 100 / 103;
 }
 
 .character-card:hover{
@@ -203,6 +198,7 @@ body{
 
 .character-card img{
   width: 100%;
+  height: 100%;
   transform: scale(1.1);
   transition: all 0.3s ease-out; 
 }
