--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   font-family: "Sniglet", cursive;
 
+
   -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
      -khtml-user-select: none; /* Konqueror HTML */
@@ -137,7 +138,7 @@ header img{
   height: 44px;
 }
 
-#Datadiv {
+.Datadiv {
   text-align: center;
   padding: 0.5rem;
   display: flex;
@@ -202,6 +203,8 @@ header img{
   overflow: hidden;
   border-radius: 1rem;
 
+  flex: 0 0 19.5rem;
+  scroll-snap-align: start;
   aspect-ratio: 100 / 103;
 }
 
@@ -370,6 +373,7 @@ header img{
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
   cursor: pointer;
+  font-size: 1rem;
 }
  
 .DisabledBtn{
@@ -381,6 +385,7 @@ header img{
   border-radius: 0.5rem;
   background-color: #ffffff;
   color: rgb(0, 0, 0);
+  font-size: 1rem;
   cursor: none;
 }
 
@@ -410,5 +415,47 @@ header img{
   .inputbox{
     margin: 0 auto;
     margin-bottom: 1rem;
+  }
+}
+
+@media screen and (max-width: 696px){
+  .Datadiv{
+    flex-direction: none;
+    flex-direction: unset;
+    flex-wrap: unset;
+    justify-content: start;
+    margin: unset;
+    width: unset;
+
+    display: flex;
+    overflow-x: scroll;
+    padding: 24px;
+    scroll-snap-type: x mandatory;
+    scroll-padding: 24px;
+    border-radius: 8px;
+    gap: 12px;
+  }
+
+  .Datadiv::-webkit-scrollbar {
+    height: 12px;
+    transition: 0.5s;
+}
+  
+  /* Track */
+  .Datadiv::-webkit-scrollbar-track {
+    background: rgba(0, 0, 0, 0.084)
+  }
+   
+}
+
+@media(max-width: 435px){
+  header{
+    display: flex;
+    justify-content: center;
+    height: auto;
+  }
+
+  header img{
+    width: 100%;
   }
 }
